--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
       - name: build
         run: |
           npm install
-          npm run build -- --configuration=production
+          npm run build -- --configuration=production --base-href /ng-shop-admin/
         env:
           CI: true
       - name: Deploy
