Fix: add 404 for refresh [ref:no-ref]

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           npm install
           npm run build -- --configuration=production --base-href /ng-shop-admin/
+          cp ./dist/shop-admin/index.html ./dist/shop-admin/404.html
         env:
           CI: true
       - name: Deploy
