--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.0.0-rc.2",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.2",
     "@angular/router": "~9.0.0-rc.2",
+    "ngx-grid-layout": "0.0.5",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
