--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
+    "ng-click-outside": "^6.0.0",
     "ngx-grid-layout": "0.0.5",
     "ngx-infinite-scroll": "^8.0.1",
     "rxjs": "~6.5.3",
